force-app/main/default/objects/DOCEBO1_CO__c/DOCEBO1_CO__c.object-meta.xml
<CustomObject>
    <description>LMS Courses</description>
    <label>LMS Course</label>
    <nameField>
        <label>Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>