force-app/main/default/objects/DOCEBO1_CO__c/fields/C_DC_COURSE_CODE__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_CODE__c</fullName>
    <label>Course Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>