force-app/main/default/objects/DOCEBO1_CO__c/fields/C_DC_COURSE_DESC__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_DESC__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>