force-app/main/default/objects/DOCEBO1_CO__c/fields/C_DC_COURSE_LANG__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_LANG__c</fullName>
    <label>Language</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>