force-app/main/default/objects/DOCEBO1_CO__c/fields/C_DC_COURSE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>C_DC_COURSE_TYPE__c</fullName>
    <label>Course type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>