force-app/main/default/objects/DOCEBO1_CO__c/fields/D_CREATE__c.field-meta.xml
<CustomField>
    <fullName>D_CREATE__c</fullName>
    <label>Created</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>