force-app/main/default/objects/DOCEBO1_CO__c/fields/D_DELETE__c.field-meta.xml
<CustomField>
    <fullName>D_DELETE__c</fullName>
    <label>Deleted Datetime</label>
    <type>DateTime</type>
</CustomField>