force-app/main/default/objects/DOCEBO1_CO__c/fields/D_UPDATE__c.field-meta.xml
<CustomField>
    <fullName>D_UPDATE__c</fullName>
    <label>Updated</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>