force-app/main/default/objects/DOCEBO1_CO__c/fields/N_REVISION__c.field-meta.xml
<CustomField>
    <fullName>N_REVISION__c</fullName>
    <label>Revision</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>